--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+############################
 # Build results
+############################
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -23,32 +25,93 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+############################
 # .NET Core
+############################
 project.lock.json
 project.fragment.lock.json
 artifacts/
 
+############################
 # ASP.NET Scaffolding
+############################
 ScaffoldingReadMe.txt
 
+############################
 # NuGet Packages
+############################
 *.nupkg
 # NuGet Symbol Packages
 *.snupkg
 
+############################
 # Others
+############################
 ~$*
 *~
 CodeCoverage/
 
+############################
 # MSBuild Binary and Structured Log
+############################
 *.binlog
 
+############################
 # MSTest test Results
+############################
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 
+############################
 # NUnit
+############################
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+############################
+# Visual Studio / IDE caches
+############################
+.vs/
+**/.vs/
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# VS Code
+.vscode/
+
+############################
+# Rider / JetBrains
+############################
+.idea/
+*.sln.iml
+
+############################
+# Angular / Node
+############################
+node_modules/
+dist/
+out/
+coverage/
+.angular/
+.cache/
+tmp/
+.tmp/
+*.tsbuildinfo
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+############################
+# OS junk
+############################
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
