--- a/WebShop-be/WebShop/appsettings.json
+++ b/WebShop-be/WebShop/appsettings.json
@@ -17,5 +17,9 @@
     "Key": "ThisIsASecretKeyForJwtTokenMustBeLongEnough",
     "Issuer": "BlueRent",
     "Audience": "BlueRentUsers"
+  },
+  "Payment": {
+    "MerchantId": "WSHOP-RENT-A-CAR-023",
+    "MerchantPassword": "wshop-secret-key-12345"
   }
 }
