--- a/PSP-fe/PSP-fe/angular.json
+++ b/PSP-fe/PSP-fe/angular.json
@@ -80,7 +80,10 @@
               "buildTarget": "PSP-fe:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+           "options": {
+                        "port": 4201
+                    }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
