--- a/WebShop-be/WebShop/appsettings.json
+++ b/WebShop-be/WebShop/appsettings.json
@@ -19,7 +19,7 @@
     "Audience": "BlueRentUsers"
   },
   "Payment": {
-    "MerchantId": "WSHOP-RENT-A-CAR-023",
-    "MerchantPassword": "wshop-secret-key-12345"
+    "MerchantId": "0decae88-9510-40f1-ab51-ab8ab33c7a2a",
+    "MerchantPassword": "test"
   }
 }
