--- a/WebShop-be/WebShop/appsettings.json
+++ b/WebShop-be/WebShop/appsettings.json
@@ -21,5 +21,10 @@
   "Payment": {
     "MerchantId": "0decae88-9510-40f1-ab51-ab8ab33c7a2a",
     "MerchantPassword": "test"
+  },
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
   }
 }
