--- a/Bank-fe/bank-be/angular.json
+++ b/Bank-fe/bank-be/angular.json
@@ -80,7 +80,10 @@
               "buildTarget": "bank-be:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "port": 4202
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
