hash merchant password on psp

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ bld/
 ############################
 # .NET Core
 ############################
+appsettings.json
 project.lock.json
 project.fragment.lock.json
 artifacts/
