--- a/Bank-fe/bank-be/package.json
+++ b/Bank-fe/bank-be/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
