--- a/Bank-be/Bank-be.csproj
+++ b/Bank-be/Bank-be.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="QRCoder" Version="1.7.0" />
     <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="ZXing.Net.Bindings.ImageSharp.V2" Version="0.16.18" />
+    <PackageReference Include="ZXing.Net.Bindings.SkiaSharp" Version="0.16.22" />
   </ItemGroup>
 
   <ItemGroup>
